--- a/src/main/java/bd/UI/DialogFrame.form
+++ b/src/main/java/bd/UI/DialogFrame.form
@@ -40,14 +40,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="b033f" class="javax.swing.JTextField" binding="textField7" default-binding="true">
-        <constraints>
-          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="ed367" class="javax.swing.JTextField" binding="textField3" default-binding="true">
         <constraints>
           <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -111,14 +103,6 @@
           <text value="Номер экземпляра:"/>
         </properties>
       </component>
-      <component id="aac3c" class="javax.swing.JTextField" binding="textField8" default-binding="true">
-        <constraints>
-          <grid row="12" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="e98f0" class="javax.swing.JLabel">
         <constraints>
           <grid row="10" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -152,6 +136,18 @@
         <properties>
           <text value="Отменить"/>
         </properties>
+      </component>
+      <component id="9a942" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+        <constraints>
+          <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="46a0d" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+        <constraints>
+          <grid row="12" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
